website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/guides/markdown-features/markdown-features-plugins.mdx
---
id: plugins
description: Using MDX plugins to expand Docusaurus Markdown functionalities
slug: /markdown-features/plugins
---

# MDX 插件

有時您可能需要擴展或調整 Markdown 語法。例如：

- 如何使用圖片語法嵌入 YouTube 影片（`![](https://youtu.be/yKNxeF4KMsY)`）？
- 如何為獨立成行的連結設定不同樣式（例如社交卡片樣式）？
- 如何讓每個頁面開頭自動加入版權聲明？

答案就是：建立 MDX 插件！MDX 內建[插件系統](https://mdxjs.com/advanced/plugins/)，可用於自訂 Markdown 檔案如何被解析並轉換為 JSX。MDX 插件有三種典型使用情境：

- 使用現有的 [remark 插件](https://github.com/remarkjs/remark/blob/main/doc/plugins.md#list-of-plugins)或 [rehype 插件](https://github.com/rehypejs/rehype/blob/main/doc/plugins.md#list-of-plugins)；
- 建立 remark/rehype 插件來轉換現有 MDX 語法生成的元素；
- 建立 remark/rehype 插件來為 MDX 引入新語法。

如果您操作過 [MDX 遊樂場](https://mdxjs.com/playground/)，會注意到 MDX 轉譯有兩個中間步驟：Markdown 抽象語法樹（MDAST）和超文本抽象語法樹（HAST），最終才會輸出 JSX。MDX 插件也分為兩種形式：

- **[Remark](https://github.com/remarkjs/remark/)**：處理 Markdown 抽象語法樹。
- **[Rehype](https://github.com/rehypejs/rehype/)**：處理超文本抽象語法樹。

:::tip

使用插件為專案中最常用的 JSX 元素引入簡潔語法。我們提供的[告示語法](./markdown-features-admonitions.mdx)也是由 Remark 插件生成，您可以為自己的使用情境實現類似功能。

:::

## 預設插件 {#default-plugins}

Docusaurus 在 Markdown 處理過程中會注入[一些預設 Remark 插件](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-mdx-loader/src/remark)。這些插件會：

- 生成目錄；
- 為每個標題添加錨點連結；
- 將圖片和連結轉換為 `require()` 調用；
- …

這些都是 Remark 插件的典型應用場景，也可作為您實現自訂插件時的靈感來源。

## 安裝插件 {#installing-plugins}

MDX 插件通常是 npm 套件，因此您可以使用 npm 像安裝其他套件一樣安裝它們。以[數學公式插件](./markdown-features-math-equations.mdx)為例：

```bash npm2yarn
npm install --save remark-math@5 rehype-katex@6
```

<details>
  <summary>How are <code>remark-math</code> and <code>rehype-katex</code> different?</summary>

In case you are wondering how Remark and Rehype are different, here is a good example. `remark-math` operates on the Markdown AST, where it sees text like `$...$`, and all it does is transform that to the JSX `<span class="math math-inline">...</span>` without doing too much with the content. This decouples the extraction of math formulae from their rendering, which means you can swap $\KaTeX$ out with other math renderers, like MathJax (with [`rehype-mathjax`](https://github.com/remarkjs/remark-math/tree/main/packages/rehype-mathjax)), just by replacing the Rehype plugin.

Next, the `rehype-katex` operates on the Hypertext AST where everything has been converted to HTML-like tags already. It traverses all the elements with `math` class and uses $\KaTeX$ to parse and render the content to actual HTML.

</details>

:::warning

許多官方 Remark/Rehype 插件[僅支援 ES Modules](https://gist.github.com/sindresorhus/a39789f98801d908bbc7ff3ecc99d99c)，這是 Docusaurus 支援的 JavaScript 模組系統。建議使用 [ES Modules](https://flaviocopes.com/es-modules/) 設定檔來簡化這類套件的導入流程。

:::

接著導入您的插件，並透過 `docusaurus.config.js` 中的插件或預設配置將其加入插件選項：

```js title="docusaurus.config.js"
// highlight-start
import remarkMath from 'remark-math';
import rehypeKatex from 'rehype-katex';
// highlight-end

// highlight-start
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          path: 'docs',
          // highlight-start
          remarkPlugins: [remarkMath],
          rehypePlugins: [rehypeKatex],
          // highlight-end
        },
      },
    ],
  ],
};
```

<details>
  <summary>Using a [**CommonJS**](https://nodejs.org/api/modules.html#modules-commonjs-modules) config file?</summary>

If you decide to use a CommonJS config file, it is possible to load those ES module plugins thanks to dynamic imports and an async config creator function:

```js title="docusaurus.config.js"
// highlight-start
module.exports = async function createConfigAsync() {
  // highlight-end
  return {
    presets: [
      [
        '@docusaurus/preset-classic',
        {
          docs: {
            path: 'docs',
            // highlight-start
            remarkPlugins: [(await import('remark-math')).default],
            rehypePlugins: [(await import('rehype-katex')).default],
            // highlight-end
          },
        },
      ],
    ],
  };
};
```

</details>

## 配置插件 {#configuring-plugins}

部分插件可進行配置並接受專屬選項。這種情況下，請使用 `[plugin, pluginOptions]` 語法，例如：

```js title="docusaurus.config.js"
import rehypeKatex from 'rehype-katex';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          rehypePlugins: [
            // highlight-start
            [rehypeKatex, {strict: false}],
            // highlight-end
          ],
        },
      },
    ],
  ],
};
```

您應查閱插件文件以了解其支援的選項。

## 建立新的 rehype/remark 插件 {#creating-new-rehyperemark-plugins}

如果現有的套件無法滿足你的客製化需求，你可以自行建立 MDX 外掛程式。

:::note

以下說明**並非**建立外掛程式的完整指南，僅是展示如何讓它與 Docusaurus 協同運作。如需更深入的工作原理說明，請參閱 [Remark](https://github.com/remarkjs/remark/blob/main/doc/plugins.md#create-plugins) 或 [Rehype](https://github.com/rehypejs/rehype/blob/main/doc/plugins.md#create-plugins) 的官方文件。

:::

舉例來說，我們建立一個外掛程式，為每個 `h2` 標題加上 `第 X 節. ` 的前綴。首先，在任何位置建立外掛程式原始檔——你甚至可以將其發佈為獨立的 npm 套件並如前述方式安裝。我們將外掛程式放在 `src/remark/section-prefix.js`。remark/rehype 外掛程式本質上是一個接收 `options` 並返回操作 AST 的 `transformer` 的函式。

```js "src/remark/section-prefix.js"
import visit from 'unist-util-visit';

const plugin = (options) => {
  const transformer = async (ast) => {
    let number = 1;
    visit(ast, 'heading', (node) => {
      if (node.depth === 2 && node.children.length > 0) {
        node.children.unshift({
          type: 'text',
          value: `Section ${number}. `,
        });
        number++;
      }
    });
  };
  return transformer;
};

export default plugin;
```

現在你可以在 `docusaurus.config.js` 中導入這個外掛程式，並像使用其他已安裝的外掛程式一樣使用它！

```js title="docusaurus.config.js"
// highlight-next-line
import sectionPrefix from './src/remark/section-prefix';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          remarkPlugins: [sectionPrefix],
        },
      },
    ],
  ],
};
```

:::tip

`transformer` 函式的第二個參數 [`vfile`](https://github.com/vfile/vfile) 非常實用，特別是當你需要存取當前 Markdown 檔案的路徑時。

```js
const plugin = (options) => {
  const transformer = async (ast, vfile) => {
    ast.children.unshift({
      type: 'text',
      value: `當前檔案路徑為 ${vfile.path}`,
    });
  };
  return transformer;
};
```

例如，我們的 `transformImage` 外掛程式就利用此參數，將相對圖片參照轉換為 `require()` 呼叫。

:::

:::note

Docusaurus 的預設外掛程式會先於自訂的 remark 外掛程式執行，這意味著圖片或連結已被轉換為帶有 `require()` 呼叫的 JSX。例如在上面的範例中，即使所有 `h2` 標題現在都帶有 `第 X 節. ` 前綴，生成的目錄仍保持不變，因為目錄生成外掛程式在我們的自訂外掛程式之前執行。若你需要在預設外掛程式處理 MDAST 之前進行操作，請使用 `beforeDefaultRemarkPlugins` 和 `beforeDefaultRehypePlugins`。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          beforeDefaultRemarkPlugins: [sectionPrefix],
        },
      },
    ],
  ],
};
```

這樣生成的目錄也會包含 `第 X 節. ` 前綴。

:::